# Brain

./: .brainrules  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  MIGRATION_STATUS.md  OPENAI_SETUP.md  README.md  STATUS.md  VICTORY_SUMMARY.md  benchmark.md  code-complexity.json  code-framework.json  code.json  cognitive-agents.md  demo_memory.db  env.example  improvement.md  meta_memory_demo.db  new.txt  novelty_demo.db  phase3_improved_extraction.jsonl  phase3_proper_inputs.jsonl  pyproject.toml
crates/brain-analysis/: Cargo.toml
crates/brain-api/: Cargo.toml
crates/brain-api/src/: agents.rs  auth.rs  lib.rs  logging.rs  rate_limit.rs  visualization.rs  web_server.rs  websocket.rs
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: concierge.rs  humaneval.rs  lib.rs  main.rs
crates/brain-cognitive/: Cargo.toml
crates/brain-cognitive/src/: context.rs  intelligence.rs  learning.rs  lib.rs  meta.rs  meta_memory.rs  models.rs  training.rs
crates/brain-cognitive/src/agents/: mod.rs  registry.rs  traits.rs
crates/brain-cognitive/src/agents/development/: api.rs  architect.rs  backend_coder.rs  deployer.rs  designer.rs  doc.rs  frontend_coder.rs  maintainer.rs  mod.rs  planner.rs  refactor.rs  schema.rs
crates/brain-cognitive/src/agents/intelligence/: data_ingestion.rs  feature_experimentation.rs  mlops.rs  mod.rs  model_training.rs  user_behavior_analyst.rs
crates/brain-cognitive/src/agents/ops/: backup_recovery.rs  build_optimizer.rs  drift_detection.rs  hotfix.rs  mod.rs  observability.rs  replication_scaling.rs
crates/brain-cognitive/src/agents/platform/: api_gateway.rs  container_orchestration.rs  data_visualization.rs  infrastructure_provisioning.rs  localization.rs  mod.rs  platform_compatibility.rs  service_mesh.rs  system_orchestration.rs
crates/brain-cognitive/src/agents/security/: cyber_security.rs  data_privacy.rs  ethical_ai.rs  mod.rs  privacy_compliance.rs  prompt_security.rs
crates/brain-cognitive/src/agents/standards/: code_generation.rs  framework.rs  mod.rs  quality_metrics.rs  validation.rs
crates/brain-cognitive/src/agents/testing/: mod.rs  qa.rs  sandbox_environment.rs
crates/brain-cognitive/src/conversation/: context.rs  mod.rs  response_quality.rs  traits.rs
crates/brain-cognitive/src/evolution/: integration.rs  learning_loop.rs  meta_agent.rs  mod.rs  optimization.rs  performance.rs
crates/brain-cognitive/src/orchestrator/: communication.rs  dag.rs  executor.rs  memory.rs  mod.rs  scheduler.rs
crates/brain-cognitive/src/profiles/: adapters.rs  manager.rs  mod.rs  presets.rs
crates/brain-core/: Cargo.toml
crates/brain-core/src/: character_ingestion.rs  concepts.rs  insights.rs  lib.rs  memory.rs  neural.rs  segmentation.rs  simulation.rs
crates/brain-infra/: Cargo.toml
crates/brain-infra/src/: character_ingestion.rs  concepts.rs  config.rs  database.rs  filesystem.rs  github_integration.rs  http.rs  insights.rs  lib.rs  memory.rs  neural.rs  performance_monitor.rs  segmentation.rs  simulation.rs  simulation_engine.rs  system_integration.rs
data/: README.md
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: HUMANEVAL_ACHIEVEMENT.md  HUMANEVAL_EVALUATION_ISSUE_ANALYSIS.md  HUMANEVAL_FULL_EVALUATION_GUIDE.md  HUMANEVAL_TECHNICAL_REFERENCE.md  README-inline-styles.md  README.md  add-cache-buster.js  book.toml  build-docs.sh  cognitive-agents.md  fix-inline-styles.js  validate-styles.js
documentation/: API_COMPATIBILITY_MIGRATION_FINAL_STATUS.md  BRAIN_AI_ORCHESTRATOR.md  CHANGELOG.md  COGNITIVE_AGENTS_PHASE_1_COMPLETION.md  CURIOSITY_LEARNING_MIGRATION_REPORT.md  DEPLOYMENT.md  ENHANCED_LEARNING_MIGRATION_REPORT.md  EXAMPLES_AUDIT_FINAL_REPORT.md  FILE_ORGANIZATION_COMPLETE.md  GITHUB_INTEGRATION_MIGRATION_COMPLETION.md  GITHUB_INTEGRATION_SUCCESS.md  INDEPENDENT_INTELLIGENCE_MIGRATION_REPORT.md  INSIGHT_EXTRACTION_MIGRATION_REPORT.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  NOVELTY_DETECTION_MIGRATION_REPORT.md  PERFORMANCE_MONITOR_MIGRATION_COMPLETION.md  PHASE_2_PLANNER_AGENT_COMPLETION.md  README.md  STATUS.md  SYSTEM_INTEGRATION_MIGRATION_COMPLETION.md  TASK_10_1_COMPLETION.md  TASK_10_2_COMPLETION.md  TASK_10_3_COMPLETION.md  TASK_2_1_3_DESIGNER_AGENT_COMPLETION.md  TASK_2_1_4_SCHEMA_AGENT_COMPLETION.md  TASK_2_1_5_API_AGENT_COMPLETION.md  TESTS_MIGRATION_COMPLETION.md  WEB_SERVER_MIGRATION_COMPLETION.md  hybrid-multi-crate.md  plan.md
examples/: api_agent_demo.rs  architect_agent_demo.rs  auth_logging_demo.rs  basic_keyword_search.rs  bpe_demo.rs  brain_ai_orchestrator_test.rs  brain_ai_orchestrator_test_DISABLED.rs  brain_server.rs  branching_simulation_demo.rs  cognitive_agents_demo_simple.rs  concept_graph_demo.rs  curiosity_learning_demo.rs  debug_memory_content.rs  debug_rag_retrieval.rs  deployer_agent_demo.rs  designer_agent_demo.rs  direct_rag_pocketflow.rs  doc_agent_demo.rs  enhanced_learning_demo.rs  extract_readme_insights.rs  frontend_coder_demo.rs  github_learning_demo.rs  independent_intelligence_demo.rs  insight_extraction_demo.rs  integration_demo.rs  maintainer_agent_demo.rs  memory_consolidation_demo.rs  memory_demo.rs  memory_storage_demo.rs  memory_timeline_demo.rs  meta_memory_demo.rs  neural_architecture_demo.rs  novelty_detection_demo.rs  openai_brain_test.rs  planner_agent_demo.rs  pocketflow_analysis_demo.rs  python_api_demo.py  query_export_demo.rs  refactor_agent_demo.rs  sample_text.txt  (+10 more)
logs/: complete_final_test.jsonl  complete_test_results.jsonl  comprehensive_full_test.jsonl  debug_iteration.jsonl  debug_validation.jsonl  debug_validation10.jsonl  debug_validation5.jsonl  debug_validation7.jsonl  final_perfect_test.jsonl  learning_records_20250704.jsonl  learning_test.json  make_palindrome_fix_test.jsonl  perfect_fix_test.jsonl  perfect_test_results.jsonl  phase2_orchestrated.jsonl  phase2_test.jsonl  phase3_bypass_test.json  phase3_complete_bypass_test.jsonl  phase3_comprehensive_test.json  phase3_comprehensive_validation_20.jsonl  phase3_final_success.jsonl  phase6_enhanced_test.jsonl  phase6_final_comprehensive.jsonl  results_10.jsonl  (+10 more)
(+177 files in other folders)
