[package]
name = "brain"
version = "0.1.0"
edition = "2021"
description = "A post-transformer developmental AI architecture"
authors = ["Brain Team"]
license-file = "LICENSE"

[lib]
name = "brain"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
# Linear algebra
nalgebra = "0.32"

# Random number generation
rand = "0.8"

# Serialization for saving models and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI and logging
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Async runtime for potential future features
tokio = { version = "1.0", features = ["full"] }

# File I/O and utilities
anyhow = "1.0"
thiserror = "1.0"

# Memory Module Dependencies (Task 3) - Lightweight approach
# SQLite for episodic memory storage (lighter than DuckDB)
rusqlite = { version = "0.30", features = ["bundled"] }

# Simple vector operations for semantic memory
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Neo4j database for concept graph (Task 4)
neo4rs = "0.8"

# Python bindings for API interface (Task 7) - Optional
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Task 7.3 Dependencies - Authentication, Logging, and Documentation
# JWT authentication
jsonwebtoken = "9.0"
# HTTP server for documentation
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Enhanced logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Rate limiting
governor = "0.6"
# Time handling for authentication
time = "0.3"
# Configuration management
config = "0.14"
# Additional serialization for OpenAPI
serde_yaml = "0.9"
# SHA256 for API key hashing
sha2 = "0.10"
# Base64 encoding for tokens
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bin]]
name = "brain-cli"
path = "src/main.rs" 