[workspace]
members = [
    "crates/brain-core",      # Pure domain logic (memory, concepts, patterns)
    "crates/brain-infra",     # Infrastructure (DB, files, external APIs)
    "crates/brain-api",       # REST API layer (web routes, handlers)
    "crates/brain-cli",       # Command line interface
    "crates/brain-types",     # Shared types, errors, utilities
    "crates/brain-cognitive", # Cognitive architecture (conversation, learning)
    "crates/brain-analysis",  # Code analysis and pattern recognition
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# Web framework
warp = "0.3"
axum = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# AI/ML (removed for initial migration)

# External integrations
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
octocrab = "0.35"

# Testing
mockall = "0.12"
insta = "1.30"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/brain-ai" 