[package]
name = "brain-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brain-types = { path = "../brain-types" }
brain-core = { path = "../brain-core" }

serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Pattern analysis
regex = "1.10"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20" 