[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain-types = { path = "../brain-types" }
brain-core = { path = "../brain-core" }
brain-infra = { path = "../brain-infra" }
brain-cognitive = { path = "../brain-cognitive" }
brain-analysis = { path = "../brain-analysis" }

tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.14" 