[package]
name = "brain-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
brain-api = { path = "../brain-api" }
brain-types = { path = "../brain-types" }
brain-core = { path = "../brain-core" }
brain-infra = { path = "../brain-infra" }
brain-cognitive = { path = "../brain-cognitive" }
brain-analysis = { path = "../brain-analysis" }

tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde.workspace = true
anyhow = "1.0"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
config = "0.14" 