[package]
name = "brain-cognitive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brain-types = { path = "../brain-types" }
brain-core = { path = "../brain-core" }

tokio.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Text processing
regex = "1.10" 