[package]
name = "brain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
brain-types = { path = "../brain-types" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

# Core logic dependencies (no I/O) - minimal for migration
nalgebra = "0.32"
rand = "0.8" 